--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lucide-react": "^0.441.0",
     "recharts": "^2.12.7",
     "react-hook-form": "^7.53.0",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
