--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tribumi-recon",
-  "private": true,
   "version": "1.0.0",
+  "description": "Malaysia's largest imported car platform - From Far Away, To Your Driveway",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,20 +12,40 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "lucide-react": "^0.441.0",
+    "react-router-dom": "^6.26.2",
+    "lucide-react": "^0.445.0",
     "recharts": "^2.12.7",
-    "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
-    "clsx": "^2.1.1"
+    "react-hook-form": "^7.55.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.2",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.10",
     "tailwindcss": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.0"
-  }
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47"
+  },
+  "keywords": [
+    "car-import",
+    "malaysia",
+    "japan-cars",
+    "uk-cars",
+    "australia-cars",
+    "recon-cars",
+    "vehicle-import"
+  ],
+  "author": "Tribumi Ventures",
+  "license": "UNLICENSED",
+  "private": true
 }
